--- a/notebooks/20190115_blastx_ncbi_nr_v5_porites.ipynb
+++ b/notebooks/20190115_blastx_ncbi_nr_v5_porites.ipynb
@@ -211,6 +211,73 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "total 7.0M\n",
+      "-rw-rw-r-- 1 sam sam  71K Jan 15 07:14 cnidaria.txids\n",
+      "-rw-rw-r-- 1 sam sam    0 Jan 15 07:18 20190115_blastx_nr_porites.out\n",
+      "-rw-rw-r-- 1 sam sam   61 Jan 15 07:18 20190115_blastx_nr_porites.err\n",
+      "-rw-rw-r-- 1 sam sam 5.4M Jan 15 20:43 20190115_blastx_nr_porites.tab\n",
+      "-rw-rw-r-- 1 sam sam 1.6M Jan 19 13:32 20190115_blastx_nr_porites.list\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "ls -ltrh /media/sam/4TB_toshiba/porites/20190115_blastx_ncbi_nr-v5_porites/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "total 7.2M\n",
+      "-rw-rw-r-- 1 sam sam  71K Jan 15 07:14 cnidaria.txids\n",
+      "-rw-rw-r-- 1 sam sam    0 Jan 15 07:18 20190115_blastx_nr_porites.out\n",
+      "-rw-rw-r-- 1 sam sam   61 Jan 15 07:18 20190115_blastx_nr_porites.err\n",
+      "-rw-rw-r-- 1 sam sam 5.4M Jan 15 20:43 20190115_blastx_nr_porites.tab\n",
+      "-rw-rw-r-- 1 sam sam 1.7M Jan 22 15:55 20190115_blastx_nr_porites.list\n",
+      "60605 20190115_blastx_nr_porites.list\n",
+      "\n",
+      "TRINITY_DN100060_c0_g1_i1.p1\n",
+      "TRINITY_DN100087_c0_g1_i1.p2\n",
+      "TRINITY_DN100128_c0_g1_i1.p1\n",
+      "TRINITY_DN100292_c0_g1_i1.p2\n",
+      "TRINITY_DN100302_c0_g1_i1.p1\n",
+      "TRINITY_DN100366_c0_g1_i1.p1\n",
+      "TRINITY_DN100412_c0_g1_i1.p1\n",
+      "TRINITY_DN100516_c0_g1_i1.p1\n",
+      "TRINITY_DN10051_c0_g1_i1.p1\n",
+      "TRINITY_DN100553_c0_g1_i1.p1\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "cd /media/sam/4TB_toshiba/porites/20190115_blastx_ncbi_nr-v5_porites/\n",
+    "awk '{print $1}' 20190115_blastx_nr_porites.tab > 20190115_blastx_nr_porites.list\n",
+    "\n",
+    "ls -ltrh\n",
+    "\n",
+    "wc -l 20190115_blastx_nr_porites.list\n",
+    "\n",
+    "echo \"\"\n",
+    "\n",
+    "head 20190115_blastx_nr_porites.list"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
