--- a/analyses/coral_venn_diagrams.ipynb
+++ b/analyses/coral_venn_diagrams.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Up-regulated, enriched GO term comparisons"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Import modules"
    ]
   },
