fix header formatting

--- a/analyses/coral_venn_diagrams.ipynb
+++ b/analyses/coral_venn_diagrams.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Import modules"
+    "#### Import modules"
    ]
   },
   {
@@ -30,7 +30,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Read in files"
+    "#### Read in files"
    ]
   },
   {
@@ -60,10 +60,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 30,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "### Montipora bleached vs non-bleached"
    ]
